--- a/AspNetReactTemplate.Client/package.json
+++ b/AspNetReactTemplate.Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactapp1.client",
+  "name": "asp-net-react-tempatlate-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
